--- a/TaMinhLe/simpleform.html
+++ b/TaMinhLe/simpleform.html
@@ -38,10 +38,10 @@
         }
     </style>
     <form method="get" action="simpleform.html" class="wufoo"></form>
-    <form action="https://www.google.com.vn/search">
+    <formaction=a ction="https://www.google.com.vn/search">
         <input type="text" name="q" />
         <input type="submit" value="Tìm kiếm" />
-    </form>
+        </form>
 
 
 
